ADC_SingleEndedMode01.cydsn/ADC_SingleEndedMode01.cydsn/ARM_GCC_493/Debug/BUILD.log
--------------- Build Started: 04/24/2016 16:29:17 Project: ADC_SingleEndedMode01, Configuration: ARM GCC 4.9-2015-q1-update Debug ---------------
cydsfit.exe -.appdatapath "C:\Users\jthem\AppData\Local\Cypress Semiconductor\PSoC Creator\3.3" -.fdsnotice -.fdswarpdepfile=warp_dependencies.txt -.fdselabdepfile=elab_dependencies.txt -.fdsbldfile=generated_files.txt -p "C:\Users\jthem\Documents\PSoC Creator\PWMExample01\ADC_SingleEndedMode01.cydsn\ADC_SingleEndedMode01.cydsn\ADC_SingleEndedMode01.cyprj" -d CY8C5868AXI-LP035 -s "C:\Users\jthem\Documents\PSoC Creator\PWMExample01\ADC_SingleEndedMode01.cydsn\ADC_SingleEndedMode01.cydsn\Generated_Source\PSoC5" -- -yv2 -q10 -ygs -o2 -v3 -.fftcfgtype=LE
Elaborating Design...
HDL Generation ...
Synthesis ...
Place and Route ...
Tech mapping ...
Analog Placement ...
Log: apr.M0058: The analog placement iterative improvement is 44% done. (App=cydsfit)
Analog Routing ...
Analog Code Generation ...
Digital Placement ...
Digital Routing ...
Bitstream Generation ...
Static timing analysis ...
API Generation ...
Dependency Generation ...
Clean Temporary Files ...
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -Wno-main -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\ARM_GCC_493\Debug/main.lst -g -ffunction-sections -O0 -ffat-lto-objects -c .\main.c -o .\ARM_GCC_493\Debug\main.o
.\main.c: In function 'main':
.\main.c:69:41: error: 'ADC_DelSig_1_RETURN_STATUS' undeclared (first use in this function)
         if(ADC_DelSig_1_IsEndConversion(ADC_DelSig_1_RETURN_STATUS))
                                         ^
.\main.c:69:41: note: each undeclared identifier is reported only once for each function it appears in
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Build Failed: 04/24/2016 16:29:49 ---------------
